syntax = "proto3";

package com.road.yishi.proto.guildcampaign;

message ChallengeGuildMsg {
  int32 giveOffer = 1;
  int32 tarGuildId = 2;
}
