syntax = "proto3";

package com.road.yishi.proto.guildcampaign;

message TeamEditMsg {
  int32 userId = 1;
  int32 op = 2;
  int32 param1 = 3;
  int32 param2 = 4;
}
